--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "sass": "^1.18.0",
     "sass-loader": "^7.1.0",
     "vue-cli-plugin-bootstrap-vue": "^0.4.0",
+    "vue-svg-loader": "^0.12.0",
     "vue-template-compiler": "^2.5.21"
   }
 }
