--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "core-js": "^2.6.5",
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
+    "numeral": "^2.0.6",
     "vue": "^2.6.10",
     "vue-chartjs": "^3.4.2",
     "vue-router": "^3.0.3",
