--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.18",
     "@fortawesome/free-solid-svg-icons": "^5.8.2",
     "@fortawesome/vue-fontawesome": "^0.1.6",
+    "anychart": "^8.6.0",
     "axios": "^0.18.0",
     "bootstrap-vue": "^2.0.0-rc.19",
     "chart.js": "^2.8.0",
